# crabclip

./: Cargo.toml  Makefile  PLAN.md  README.md
.github/workflows/: release.yml
autostart/: crabclip.desktop
scripts/: release.sh
src/: config.rs  history.rs  hotkey.rs  main.rs  tray.rs  watcher.rs
