[package]
name = "crabclip"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard        = { version = "3", features = ["image-data"] }
tray-icon      = "0.18"
global-hotkey  = "0.6"
image          = { version = "0.25", default-features = false, features = ["png"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
dirs           = "5"
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
gtk            = "0.18"
crossbeam-channel = "0.5"
