[package]
name = "crabclip"
version = "0.1.4"
edition = "2021"
description = "A lightweight Linux clipboard manager with system tray integration"
license = "MIT"

[package.metadata.deb]
depends = "libgtk-3-0, libayatana-appindicator3-1, libxdo3"
section = "utils"
assets = [
    ["target/release/crabclip", "usr/bin/", "755"],
    ["autostart/crabclip.desktop", "usr/share/applications/", "644"],
    ["assets/logo.png", "usr/share/icons/hicolor/128x128/apps/crabclip.png", "644"],
    ["README.md", "usr/share/doc/crabclip/README.md", "644"],
]

[dependencies]
arboard        = { version = "3", features = ["image-data"] }
tray-icon      = "0.18"
global-hotkey  = "0.6"
image          = { version = "0.25", default-features = false, features = ["png"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
dirs           = "5"
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
gtk            = "0.18"
crossbeam-channel = "0.5"
